# matrix-multiplier

./: CMakeLists.txt  README.md
src/: configurator.hpp  main.cpp  main_backup.cpp  mapreduce.hpp  matrix.hpp
